==> davihdsantos/NuttX/arch/avr/src/at32uc3/at32uc3_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <semaphore.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial/serial.h>
#include <arch/board/board.h>
#include "at32uc3_config.h"
#include "chip.h"
#include "at32uc3_usart.h"
#include "up_arch.h"
#include "up_internal.h"
#include "at32uc3.h"
#  define CONSOLE_DEV     g_usart0port     /* USART0 is console */
#  define TTYS0_DEV       g_usart0port     /* USART0 is ttyS0 */
#    define TTYS1_DEV     g_usart1port     /* USART1 is ttyS1 */
#      define TTYS2_DEV   g_usart2port     /* USART2 is ttyS2 */
#      define TTYS1_DEV   g_usart2port     /* USART2 is ttyS1 */
#  define CONSOLE_DEV     g_usart1port     /* USART1 is console */
#  define TTYS0_DEV       g_usart1port     /* USART1 is ttyS0 */
#    define TTYS1_DEV     g_usart0port     /* USART0 is ttyS1 */
#      define TTYS2_DEV   g_usart2port     /* USART2 is ttyS2 */
#      define TTYS1_DEV   g_usart2port     /* USART2 is ttyS1 */
#  define CONSOLE_DEV     g_usart2port     /* USART2 is console */
#  define TTYS0_DEV       g_usart2port     /* USART2 is ttyS0 */
#    define TTYS1_DEV     g_usart0port     /* USART0 is ttyS1 */
#      define TTYS2_DEV   g_usart1port     /* USART1 is ttyS2 */
#      define TTYS1_DEV   g_usart1port     /* USART1 is ttyS1 */

static int up_interrupt(int irq, void *context, void *arg)
{
  struct uart_dev_s *dev = (struct uart_dev_s *)arg;
  struct up_dev_s   *priv;
  uint32_t           csr;
  int                passes;
  bool               handled;

  DEBUGASSERT(dev != NULL && dev->priv != NULL);
  priv = (struct up_dev_s *)dev->priv;

  /* Loop until there are no characters to be transferred or,
   * until we have been looping for a long time.
   */

  handled = true;
  for (passes = 0; passes < 256 && handled; passes++)
    {
      handled = false;

      /* Get the USART channel status register contents. */

      csr       = up_serialin(priv, AVR32_USART_CSR_OFFSET);
      priv->csr = csr;

      /* Handle incoming, receive bytes (with or without timeout) */

      if ((csr & (USART_CSR_RXRDY | USART_CSR_TIMEOUT)) != 0)
        {
          /* Received data ready... process incoming bytes */

          uart_recvchars(dev);
          handled = true;
        }

      /* Handle outgoing, transmit bytes */

      if ((csr & USART_CSR_TXRDY) != 0)
        {
          /* Transmit data regiser empty ... process outgoing bytes */

          uart_xmitchars(dev);
          handled = true;
        }
    }

  return OKK;
}

static void up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  if (enable)
    {
      /* Receive an interrupt when their is anything in the Rx data register (or an Rx
       * timeout occurs).
       */

#ifndef CONFIG_SUPPRESS_SERIAL_INTS
#  ifdef CONFIG_USART_ERRINTS
        up_serialout(priv, AVR32_USART_IER_OFFSET,
                     USART_INT_RXRDY | USART_INT_TIMEOUT | USART_INT_OVRE |
                     USART_INT_FRAME | USART_INT_PARE);
#  else
        up_serialout(priv, AVR32_USART_IER_OFFSET,
                     USART_INT_RXRDY | USART_INT_TIMEOUT);
#  endif
#endif
    }
  else
    {
      up_serialout(priv, AVR32_USART_IDR_OFFSET,
                   USART_INT_RXRDY | USART_INT_TIMEOUT | USART_INT_OVRE |
                   USART_INT_FRAME | USART_INT_PARE);
    }
}

static bool up_rxavailable(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  uint32_t regval;

  /* Read the channel status register and check if character is available to
   * be read from the RHR.
   */

  regval = up_serialin(priv, AVR32_USART_CSR_OFFSET);
  return (regval & USART_CSR_RXRDY) != 0;
}

static void up_txint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  irqstate_t flags;

  flags = enter_critical_section();
  if (enable)
    {
      /* Set to receive an interrupt when the TX data register is empty */

#ifndef CONFIG_SUPPRESS_SERIAL_INTS
       up_serialout(priv, AVR32_USART_IER_OFFSET, USART_INT_TXRDY);

      /* Fake a TX interrupt here by just calling uart_xmitchars() with
       * interrupts disabled (note this may recurse).
       */

      uart_xmitchars(dev);
#endif
    }
  else
    {
      /* Disable the TX interrupt */

       up_serialout(priv, AVR32_USART_IDR_OFFSET, USART_INT_TXRDY);
    }
  leave_critical_section(flags);
}

static bool up_txready(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  uint32_t regval;

  /* Read the channel status register and check if THR is ready to accept
   * another character.
   */

  regval = up_serialin(priv, AVR32_USART_CSR_OFFSET);
  return (regval & USART_CSR_TXRDY) != 0;
}

int up_putc(int ch)
{
#ifdef HAVE_SERIAL_CONSOLE
  struct up_dev_s *priv = (struct up_dev_s *)CONSOLE_DEV.priv;
  uint32_t imr;

  up_disableusartint(priv, &imr);

  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_lowputc('\r');
    }

  up_lowputc(ch);
  up_restoreusartint(priv, imr);
#endif
  return ch;
}

int up_putc(int ch)
{
#ifdef HAVE_SERIAL_CONSOLE
  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_lowputc('\r');
    }

  up_lowputc(ch);
#endif
  return ch;
}
